ARROW-13761: [R] arrow::filter() crashes (aborts R session)

Closes #11033 from westonpace/bugfix/ARROW-13761-empty-chunked-arrays-in-r

Lead-authored-by: Weston Pace <weston.pace@gmail.com>
Co-authored-by: Neal Richardson <neal.p.richardson@gmail.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>